--- a/saitae-web/src/main/webapp/pages/libros.xhtml
+++ b/saitae-web/src/main/webapp/pages/libros.xhtml
@@ -12,7 +12,37 @@
         <h:form id="form">
             <p:growl id="msgs" showDetail="true"/>
             <h1 style="align-content: center;">Administración General de Libros.</h1>
-            <p:tabView id="tw" orientation="top" dynamic="true">
+            <p:tabView id="tw" orientation="left" dynamic="true">
+                <p:tab title="Tipo de Cargos al inventario">
+                    <p:dataTable id="cargo" var="ca" value="#{tipoController.cargos}" editable="true" 
+                                 widgetVar="cargo1" styleClass="tabla" emptyMessage="Sin registros aún.">
+                        <f:facet name="header">
+                            Administración de los tipos de cargo al inventario.
+                        </f:facet>
+
+                        <p:ajax event="rowEdit" listener="#{tipoController.onRowEdit}" update=":form:msgs" />
+                        <p:ajax event="rowEditCancel" listener="#{tipoController.onRowCancel}" update=":form:msgs" />
+
+                        <p:column headerText="Id" style="width: 10px">
+                            <h:outputText value="#{ca.idtipoCargo}" />
+                        </p:column>
+
+                        <p:column headerText="Nombre">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{ca.nombre}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{ca.nombre}" 
+                                                                   style="width:100%" label="Nombre"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
+                        <p:column style="width:35px">
+                            <p:rowEditor />
+                        </p:column>
+                    </p:dataTable> 
+                    <p:commandButton value="+" styleClass="ui-priority-primary" 
+                                     process="@this" update=":form:msgs cargo"
+                                     action="#{tipoController.onAddNew('cargo')}" 
+                                     title="Agregar nuevo Tipo de Cargo para el inventario."/>
+                </p:tab>
                 <p:tab title="Autor">
                     <p:dataTable id="autor" var="au" value="#{tipoController.autor}" editable="true" 
                                  widgetVar="autor1" styleClass="tabla" emptyMessage="Sin registros aún.">
@@ -34,14 +64,14 @@
                                                                    style="width:100%" label="Nombre"/></f:facet>
                             </p:cellEditor>
                         </p:column>
-                        <p:column headerText="Comentario">
-                            <p:cellEditor>
-                                <f:facet name="output"><h:outputText value="#{au.autorComentario}" /></f:facet>
-                                <f:facet name="input"><p:inputText value="#{au.autorComentario}" 
-                                                                   style="width:100%" label="Comentario"/></f:facet>
-                            </p:cellEditor>
-                        </p:column>
-                        <p:column style="width:35px">
+                        <!-- <p:column headerText="Comentario">
+                             <p:cellEditor>
+                                 <f:facet name="output"><h:outputText value="# {au.autorComentario}" /></f:facet>
+                                 <f:facet name="input"><p:inputText value="# {au.autorComentario}" 
+                                                                    style="width:100%" label="Comentario"/></f:facet>
+                             </p:cellEditor>
+                         </p:column>
+                        --><p:column style="width:35px">
                             <p:rowEditor />
                         </p:column>
                     </p:dataTable>
@@ -57,7 +87,7 @@
                                  widgetVar="categoria0" styleClass="tabla" 
                                  emptyMessage="Sin registros aún.">
                         <f:facet name="header">
-                            Administración de Categoria.
+                            Administración de Categoría.
                         </f:facet>
 
                         <p:ajax event="rowEdit" listener="#{tipoController.onRowEdit}" 
@@ -84,7 +114,7 @@
                                 </f:facet>
                                 <f:facet name="input">
                                     <p:inputText value="#{ca.categoriaNombre}" 
-                                                                   style="width:100%" label="Nombre"/>
+                                                 style="width:100%" label="Nombre"/>
                                 </f:facet>
                             </p:cellEditor>
                         </p:column>
@@ -102,7 +132,7 @@
                     <p:dataTable id="editorial" var="e" value="#{tipoController.editorial}" editable="true" 
                                  widgetVar="editorial1" styleClass="tabla" emptyMessage="Sin registros aún.">
                         <f:facet name="header">
-                            Administración de Categoria.
+                            Administración de editoriales.
                         </f:facet>
 
                         <p:ajax event="rowEdit" listener="#{tipoController.onRowEdit}" update=":form:msgs" />
